Temporary fix to members grid on mobile view

--- a/static/css/about.scss
+++ b/static/css/about.scss
@@ -12,7 +12,16 @@
 
 .members {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  @media screen and (min-width: 550px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @media screen and (min-width: 815px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  @media screen and (min-width: 1300px) {
+    grid-template-columns: repeat(5, 1fr);
+  }
   grid-row-end: span;
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
@@ -26,6 +35,7 @@
     transition: all ease .5s;
     color: var(--text-color);
     align-content: start;
+    min-width: 160px;
 
     &:hover {
       transform: translateY(-0.5em);
